# filesnap

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: python-publish.yml
src/filesnap/: __init__.py  constants.py  main.py  utils.py  version.py
src/filesnap/files/: __init__.py  clean.py  count.py  export.py  scan.py
src/filesnap/utils/: decorators.py  filesystem.py  formatting.py
