[project]
name = "filesnap"
version = "0.1.0"
description = "Hanle all your files easily"
readme = "README.md"
authors = [
    { name = "jesus", email = "jesusjsgdev@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.21.1",
]

[project.scripts]
filesnap = "filesnap.main:app"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
