[project]
name = "filesnap"
version = "0.1.1"
description = "A simple CLI to handle your files"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "jesus", email = "jesusjsgdev@gmail.com" }]
keywords = ["cli", "files"]
dependencies = [
  "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/jesusjsg/filesnap"

[project.scripts]
filesnap = "filesnap.main:app"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
