[project]
name = "filesnap"
description = "A simple CLI to handle your files"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "jesus", email = "jesusjsgdev@gmail.com" }]
keywords = ["cli", "files"]
dependencies = [
  "typer>=0.21.1",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/jesusjsg/filesnap"

[project.scripts]
filesnap = "filesnap.main:app"

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
